istio/ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: my-gateway
spec:
  selector:
    istio: ingress
  servers:
  - port:
      name: http
      number: 80
      protocol: HTTP
    hosts:
      - "192.168.49.2"
