istio/routing-3.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
  namespace: default
spec:
  hosts:
    - "*"
  gateways:
    - my-gateway
  http:
    - retries:
        attempts: 3
        perTryTimeout: 1s
        retryOn: 5xx
      route:
        - destination:
            host: frontend
            subset: prod

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: middleware
  namespace: default
spec:
  hosts:
    - middleware
  http:
    - match:
        - headers:
            x-dev-user:
              exact: beta
      retries:
        attempts: 3
        perTryTimeout: 1s
        retryOn: 5xx
      route:
        - destination:
            host: middleware
            subset: canary
    - retries:
        attempts: 3
        perTryTimeout: 1s
        retryOn: 5xx
      route:
        - destination:
            host: middleware
            subset: prod

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend
  namespace: default
spec:
  hosts:
    - backend
  http:
    - retries:
        attempts: 3
        perTryTimeout: 1s
        retryOn: 5xx
      route:
        - destination:
            host: backend
            subset: prod
