istio/routing-4.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
spec:
  hosts:
    - "*"
  gateways:
    - my-gateway
  http:
    - route:
      - destination:
           host: frontend
           subset: prod
      retries:
        attempts: 3
        perTryTimeout: 1s
        retryOn: "5xx"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: middleware
spec:
  hosts:
    - middleware
  http:
    - route:
      - destination:
           host: middleware
           subset: prod
        weight: 50
      - destination:
            host: middleware
            subset: canary
        weight: 50
      retries:
        attempts: 3
        perTryTimeout: 1s
        retryOn: "5xx"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend
spec:
  hosts:
    - backend
  http:
    - route:
      - destination:
           host: backend
           subset: prod
      retries:
        attempts: 3
        perTryTimeout: 1s
        retryOn: "5xx"
